Fix formatting in style.css comments

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ===============================
-   Global / Reset 
+   Global / Reset  
    =============================== */
-
+o
 * { box-sizing: border-box; }
 
 html {
