--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ nav a:hover,
   text-align: center;
 
   /* Hero background image */
-  background-image: url("images/hero-bg.jpg");
+  background-image: url("images/chalkboard.jpg");
   background-size: cover;
   background-position: bottom center;
   background-repeat: no-repeat;
